--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,9 +16,11 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+      run: npx playwright install chromium --with-deps
+    - name: Run Playwright tests with increased timeout    
+      run: npx playwright test --timeout=30000
+    - name: Run Playwright tests in headless mode
+      run: npx playwright test --headed=false
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
